[package]
name = "libvplan"
version = "0.1.0"
authors = ["Jan Baudisch (flyingP0tat0) <dev@baudisch.xyz>"]
license = "GPL-3.0"
description = "An internally used library for utilizing a special case of document parsing."

[dependencies]
base64 = "0.9"
chrono = "0.4"
chrono-tz = "0.4"
futures = "0.1"
http = "0.1"
hyper = "0.12"
hyper-rustls = "0.14"
nom = "4.0"
serde = "1.0"
serde_derive = "1.0"
serde-xml-rs = { git = "https://github.com/RReverser/serde-xml-rs.git", rev = "551c78d" }
